Fix taskServiceTest